--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,11 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+bootRun.environment([
+		"WELCOME_MESSAGE": "Hello from Gradle",
+])
+
+test.environment([
+		"WELCOME_MESSAGE": "Hello from test",
+])
