Adds bump to major, minor and patch. Adds Staging environment and deploy Adds releases resource

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -26,6 +26,13 @@ resources:
     storage_account_name: {{azure-storage-account-name}}
     storage_access_key: {{azure-storage-access-key}}
     regexp: builds/hello-spring-((\d\.){2}\d(-SNAPSHOT\.\d){0,1}).jar
+- name: release-artifacts
+  type: azure-blobstore
+  source:
+    container: concourse
+    storage_account_name: {{azure-storage-account-name}}
+    storage_access_key: {{azure-storage-access-key}}
+    regexp: releases/hello-spring-((\d\.){2}\d).jar
 - name: acceptance
   type: cf
   source:
@@ -34,6 +41,15 @@ resources:
     password: {{cf-password}}
     organization: {{cf-organization}}
     space: acceptance
+    skip_cert_check: false
+- name: staging
+  type: cf
+  source:
+    api: https://api.run.pivotal.io
+    username: {{cf-username}}
+    password: {{cf-password}}
+    organization: {{cf-organization}}
+    space: staging
     skip_cert_check: false
 
 jobs:
@@ -64,5 +80,71 @@ jobs:
     params:
       manifest: master/manifest.yml
       path: build-artifacts/hello-spring-*.jar
+      environment_variables:
+        WELCOME_MESSAGE: {{hello-spring-welcome-message}}
+- name: Major
+  serial: true
+  plan:
+  - get: master
+    passed: [Acceptance]
+  - get: version
+    params:
+      bump: major
+  - get: build-artifacts
+    passed: [Acceptance]
+  - task: Bump major
+    file: master/ci/version.yml
+  - put: release-artifacts
+    params:
+      file: release-artifact/hello-spring-*.jar
+  - put: version
+    params:
+      file: version/version
+- name: Minor
+  serial: true
+  plan:
+  - get: master
+    passed: [Acceptance]
+  - get: version
+    params:
+      bump: minor
+  - get: build-artifacts
+    passed: [Acceptance]
+  - task: Bump minor
+    file: master/ci/version.yml
+  - put: release-artifacts
+    params:
+      file: release-artifact/hello-spring-*.jar
+  - put: version
+    params:
+      file: version/version
+- name: Patch
+  serial: true
+  plan:
+  - get: master
+    passed: [Acceptance]
+  - get: version
+    params:
+      bump: patch
+  - get: build-artifacts
+    passed: [Acceptance]
+  - task: Bump patch
+    file: master/ci/version.yml
+  - put: release-artifacts
+    params:
+      file: release-artifact/hello-spring-*.jar
+  - put: version
+    params:
+      file: version/version
+- name: Staging
+  serial: true
+  plan:
+  - get: master
+  - get: release-artifacts
+    trigger: true
+  - put: staging
+    params:
+      manifest: master/manifest.yml
+      path: release-artifacts/hello-spring-*.jar
       environment_variables:
         WELCOME_MESSAGE: {{hello-spring-welcome-message}}
