--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -19,6 +19,12 @@ resources:
     branch: version
     file: version
     private_key: {{git-write-key}}
+- name: tag
+  type: git
+  source:
+    uri: git@github.com:tbatard/hello-spring.git
+    branch: master
+    private_key: {{git-write-key}}
 - name: build-artifacts
   type: azure-blobstore
   source:
@@ -50,6 +56,15 @@ resources:
     password: {{cf-password}}
     organization: {{cf-organization}}
     space: staging
+    skip_cert_check: false
+- name: production
+  type: cf
+  source:
+    api: https://api.run.pivotal.io
+    username: {{cf-username}}
+    password: {{cf-password}}
+    organization: {{cf-organization}}
+    space: production
     skip_cert_check: false
 
 jobs:
@@ -148,3 +163,39 @@ jobs:
       path: release-artifacts/hello-spring-*.jar
       environment_variables:
         WELCOME_MESSAGE: {{hello-spring-welcome-message}}
+- name: Production
+  serial: true
+  plan:
+  - get: master
+    passed: [Staging]
+  - get: release-artifacts
+    passed: [Staging]
+  - task: Create version file
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: tbatard/openjdk-8
+      inputs:
+      - name: release-artifacts
+      outputs:
+      - name: version
+      run:
+        path: sh
+        args:
+        - -c
+        - |
+          fullName=$(find release-artifacts -type f -name hello-spring-*)
+          withoutAppName=${fullName#*hello-spring-}
+          echo ${withoutAppName%.jar} > version/version
+  - put: production
+    params:
+      manifest: master/manifest.yml
+      path: release-artifacts/hello-spring-*.jar
+      environment_variables:
+        WELCOME_MESSAGE: {{hello-spring-welcome-message}}
+  - put: tag
+    params:
+      repository: master
+      tag: version/version
